fix: able to add and remove subscription
